# gphotos-sorter

./: .gitignore  .pre-commit-config.yaml  MIGRATION_COMPLETE.md  README.md  SRS.txt  backfill_resolution.py  cleanup_error_records.py  gphotos-sorter.spec  justfile  migrate_db.py  pyproject.toml  requirements.txt  run_gphotos_sorter.py  run_uncloud.py  separate_memes.py  separate_memes_clip.py  test_captions.py  uncloud.spec  update_mount_paths.py
.github/workflows/: build.yml
.temp/: cleanup_duplicates.py
gphotos_sorter/: __init__.py  cli.py  cli_new.py  config.py  date_utils.py  db.py  hash_utils.py  metadata_utils.py  scanner.py  scanner_mp.py
gphotos_sorter/core/: config.py  protocols.py
gphotos_sorter/engines/: hash_engine.py
gphotos_sorter/logging/: __init__.py
gphotos_sorter/persistence/: __init__.py
gphotos_sorter/services/: file_ops.py  processor.py
tests/: __init__.py  fixtures.py  test_caption.py  test_cli.py  test_config.py  test_core_config.py  test_core_models.py  test_date_utils.py  test_db.py  test_engines_hash.py  test_engines_metadata.py  test_hash_utils.py  test_integration.py  test_logging.py  test_persistence.py  test_pipeline.py  test_scanner.py  test_scanner_mp.py  test_services.py
uncloud/: __init__.py  __main__.py  cli.py  cli_legacy_backup.py
uncloud/core/: __init__.py  config.py  models.py  protocols.py
uncloud/engines/: __init__.py  hash_engine.py  metadata.py
uncloud/logging/: rich_logger.py
uncloud/persistence/: database.py
uncloud/processors/: __init__.py  caption.py  faces.py  hash.py
uncloud/services/: __init__.py  app_context.py  deduplicator.py  exiftool.py  file_ops.py  file_ops_sync.py  index_rebuilder.py  models.py  output.py  pipeline.py  processor.py  scanner.py
