[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gphotos-sorter"
version = "0.1.0"
description = "CLI tool for ingesting and organizing Google Photos takeout exports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "gphotos-sorter contributors"}
]
keywords = ["google-photos", "photo-organizer", "exif", "deduplication", "media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.12.3",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "Pillow>=10.2.0",
    "ImageHash>=4.3.1",
    "torchvision>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
gphotos-sorter = "gphotos_sorter.cli:main"

[project.urls]
Homepage = "https://github.com/MikeOfZen/gphotos-sorter"
Repository = "https://github.com/MikeOfZen/gphotos-sorter.git"
Issues = "https://github.com/MikeOfZen/gphotos-sorter/issues"
Documentation = "https://github.com/MikeOfZen/gphotos-sorter#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["gphotos_sorter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["gphotos_sorter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
